--- a/.github/workflows/build-zte-e8820s-lede.yml
+++ b/.github/workflows/build-zte-e8820s-lede.yml
@@ -8,8 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
-
+name: build-zte-e8820s-lede
 on:
   repository_dispatch:
   workflow_dispatch:
