--- a/.github/workflows/build_jcg_q20_lede.yml
+++ b/.github/workflows/build_jcg_q20_lede.yml
@@ -23,9 +23,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: jcg_q20.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part4.sh
+  CONFIG_FILE: config/jcg_q20.config
+  DIY_P1_SH: script/diy-part1.sh
+  DIY_P2_SH: script/diy-part4.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
