Update and rename build-zte-e8820s-lede.yml to build-zte-e8820s.yml

--- a/.github/workflows/build-zte-e8820s.yml
+++ b/.github/workflows/build-zte-e8820s.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: build-zte-e8820s-lede
+name: build-zte-e8820s
 on:
   repository_dispatch:
   workflow_dispatch:
