--- a/.github/workflows/build-cr660x.yml
+++ b/.github/workflows/build-cr660x.yml
@@ -25,8 +25,8 @@ env:
   CONFIG_FILE: config/cr660x.config
   DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part5.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
+  UPLOAD_BIN_DIR: true
+  UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: false
