--- a/.github/workflows/build-cr660x.yml
+++ b/.github/workflows/build-cr660x.yml
@@ -19,7 +19,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: git://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/cr660x.config
