--- a/.github/workflows/e8820s.yml
+++ b/.github/workflows/e8820s.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: build-zte-e8820s
+name: e8820s
 on:
   repository_dispatch:
   workflow_dispatch:
