--- a/.github/workflows/e8820s.yml
+++ b/.github/workflows/e8820s.yml
@@ -19,7 +19,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/sendlan/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/zte-e8820s.config
