--- a/.github/workflows/build-zte-e8820s.yml
+++ b/.github/workflows/build-zte-e8820s.yml
@@ -22,7 +22,7 @@ env:
   REPO_URL: https://github.com/sendlan/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/e8820s.config
+  CONFIG_FILE: config/zte-e8820s.config
   DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part2.sh
   UPLOAD_BIN_DIR: false
