--- a/.github/workflows/cmcc_a9.yml
+++ b/.github/workflows/cmcc_a9.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: e8820s
+name: cmcc_a9
 on:
   repository_dispatch:
   workflow_dispatch:
