--- a/.github/workflows/build_jcg_q20_lede.yml
+++ b/.github/workflows/build_jcg_q20_lede.yml
@@ -24,12 +24,11 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/jcg_q20.config
-  DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part4.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: true
-  UPLOAD_WETRANSFER: false
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
