--- a/.github/workflows/build_jcg_q20_pb.yml
+++ b/.github/workflows/build_jcg_q20_pb.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/sendlan/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/jcg_q20.config
