--- a/.github/workflows/cmcc-a9_uboot.yaml
+++ b/.github/workflows/cmcc-a9_uboot.yaml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: cmcc_a9
+name: cmcc_a9_uboot
 on:
   repository_dispatch:
   workflow_dispatch:
