--- a/.github/workflows/jcg_q20_uboot_immortalwrt.yml
+++ b/.github/workflows/jcg_q20_uboot_immortalwrt.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   REPO_URL: https://github.com/sendlan/immortalwrt
-  REPO_BRANCH: master
+  REPO_BRANCH:  openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/immortalwrt_q20.config
   DIY_P2_SH: script/diy-3.sh
