--- a/.github/workflows/cmcc_a9_immortalwrt.yml
+++ b/.github/workflows/cmcc_a9_immortalwrt.yml
@@ -23,7 +23,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_WETRANSFER: true
-  UPLOAD_RELEASE: true
+  UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
 jobs:
