--- a/.github/workflows/cmcc_a9_immortalwrt.yml
+++ b/.github/workflows/cmcc_a9_immortalwrt.yml
@@ -20,7 +20,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/immortalwrt_a9.config
   DIY_P2_SH: script/diy-2.sh
-  UPLOAD_BIN_DIR: false
+  UPLOAD_DL_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: false
@@ -89,12 +89,12 @@ jobs:
       if: (!cancelled())
       run: df -hT
 
-    - name: Upload bin directory
+    - name: Upload dl directory
       uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_DL_DIR == 'true'
       with:
-        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-        path: openwrt/bin
+        name: OpenWrt_dl${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/dl
 
     - name: Organize files
       id: organize
